--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html,body{
 
 #page1{
     min-height: 100vh;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     width: 100%;
     position: relative;
     padding: 0 1vw;
@@ -76,16 +76,19 @@ html,body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
 }
 
 #page2 .elem{
     height: 100%;
     width: 31%;
-    background-color: black;
+    /* background-color: black; */
+    overflow: hidden;
 }
 
 #page2 .elem img{
     height: 100%;
     width: 100%;
     object-fit: cover;
+    scale: 1.1;
 }
